fix(UI): child table custom horizontal scroll

--- a/frappe/public/scss/common/grid.scss
+++ b/frappe/public/scss/common/grid.scss
@@ -486,10 +486,26 @@
 
 @media (max-width: map-get($grid-breakpoints, "md")) {
 	.form-grid-container {
-		overflow-x: scroll;
+		overflow-x: clip;
 
 		.form-grid {
-			min-width: 1000px;
+			min-width: 738px;
+		}
+	}
+
+	.form-column.col-sm-6 .form-grid {
+		.row-index {
+			display: block;
+		}
+	}
+}
+
+@media (min-width: map-get($grid-breakpoints, "md")) {
+	.form-grid-container {
+		overflow-x: unset!important;
+
+		.form-grid {
+			position: unset!important;
 		}
 	}
 
